# 3DOffroad_Navigation

./: .gitignore  README.md  citation
Controller/lowlevel_ctrl/: CMakeLists.txt  package.xml
Controller/lowlevel_ctrl/cfg/: test.cfg
Controller/lowlevel_ctrl/include/: lowlevel_ctrl.h  trajectory.h  utils.h
Controller/lowlevel_ctrl/launch/: lowlevel_ctrl.launch
Controller/lowlevel_ctrl/src/: lowlevel_ctrl.cpp  lowpass_filter.cpp  trajectory.cpp  utils.cpp
Controller/mppi_ctrl/: CMakeLists.txt  package.xml  setup.py
Controller/mppi_ctrl/include/mppi_ctrl/: gpgridmap.py  mppi.py  utils.py  vehicle_model.py
Controller/mppi_ctrl/launch/: mppi_ctrl.launch
Controller/mppi_ctrl/src/: main_node.py
Planner/gptrajpredict/: CMakeLists.txt  package.xml  setup.py
Planner/gptrajpredict/cfg/: reconfig.cfg
Planner/gptrajpredict/include/gptrajpredict/: gp_model.py  gpgridmap_batch.py  utils_batch.py  vehicle_model_batch.py
Planner/gptrajpredict/launch/: gptrajpredict.launch
Planner/gptrajpredict/src/: main_node.py
Preprocessing/elevation_mapping/elevation_mapping/: CMakeLists.txt
Preprocessing/elevation_mapping/elevation_mapping/config/robots/: traxxas.yaml
Preprocessing/elevation_mapping/elevation_mapping/include/elevation_mapping/: PointXYZRGBConfidenceRatio.hpp
Preprocessing/elevation_mapping/elevation_mapping/include/elevation_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp
Preprocessing/elevation_mapping/elevation_mapping/launch/: elevation_mapping.launch
Preprocessing/elevation_mapping/elevation_mapping/rviz/: elevation_map_visualization.rviz
Preprocessing/traversability_estimation/traversability_estimation/: CMakeLists.txt  package.xml
Preprocessing/traversability_estimation/traversability_estimation/config/: robot.yaml  robot_filter_parameter.yaml  robot_footprint_parameter.yaml  rosconsole.conf
Preprocessing/traversability_estimation/traversability_estimation/config/visualization/: terrain.yaml  traversability.yaml
Preprocessing/traversability_estimation/traversability_estimation/include/traversability_estimation/: TraversabilityEstimation.hpp  TraversabilityMap.hpp
Preprocessing/traversability_estimation/traversability_estimation/launch/: custom_rosconsole.conf  visualization_terrain.launch
Preprocessing/traversability_estimation/traversability_estimation/src/: TraversabilityEstimation.cpp  TraversabilityMap.cpp
Preprocessing/traversability_estimation/traversability_estimation_filters/: CMakeLists.txt  filter_plugins.xml
Preprocessing/traversability_estimation/traversability_estimation_filters/include/filters/: SlopeFilter.hpp
Preprocessing/traversability_estimation/traversability_estimation_filters/src/: SurfaceNormalsFilter.cpp
jpg/: Thumbs.db
simulation_env/autorally_control/: CMakeLists.txt  package.xml
simulation_env/autorally_control/launch/: joystickController.launch  waypointFollower.launch
simulation_env/autorally_control/src/gpsWaypoint/: gpsWaypoint.cpp
simulation_env/autorally_description/urdf/: autoRallyPlatform.urdf.xacro
simulation_env/autorally_description/urdf/models/blended_track/: model-1_2.sdf  model.sdf
simulation_env/autorally_description/urdf/models/dirt_plane/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
simulation_env/autorally_description/urdf/models/grass_plane/: model-1_2.sdf  model.sdf
simulation_env/autorally_description/urdf/models/hardplane/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/mudplane/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/snowy/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/testplan/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/testplan_mud/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/track/: model.sdf
simulation_env/autorally_description/urdf/models/track3dbackup/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/track3dv3/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/track3dv4/: model.config  model.sdf
simulation_env/autorally_description/urdf/models/track3dv5/: model.config  model.sdf
simulation_env/autorally_description/urdf/worlds/: Topostoffice  datalogging_plane.world  empty_sky_AR.world  mudboxPlane  mudboxPlane copy.world  mudboxPlane.world  postoffice_with_mud.world  postoffice_with_mud10.world  postoffice_with_mud11.world  postoffice_with_mud2.world  postoffice_with_mud3.world  postoffice_with_mud4.world  postoffice_with_mud5.world  postoffice_with_mud6.world  postoffice_with_mud7.world  postoffice_with_mud8.world  postoffice_with_mud9.world  postoffice_with_mud_gpmppi.world  postoffice_with_mud_view.world  terrain_test.world  testplan.world
simulation_env/autorally_description/urdf/worlds/mulplanefixedv1/mud_box_clone_1/: model.config  model.sdf
simulation_env/autorally_gazebo/launch/: gpmppi3d.launch
simulation_env/autorally_gazebo/nodes/: autorally_controller.py  ground_truth_republisher.py
simulation_env/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
tools/gplogger/: CMakeLists.txt  package.xml  setup.py
tools/gplogger/include/gplogger/: dataloader.py  gp_model.py  gpgridmap.py  utils.py  vehicle_model.py
tools/gplogger/launch/: gplogger.launch  trajlogger.launch
tools/gplogger/src/: main_node.py  traj_recorder_node.py
tools/hmcl_msgs/: CMakeLists.txt  package.xml
tools/hmcl_msgs/msg/: CtrlVehicleStates.msg  Lane.msg  LaneArray.msg  RemoteButton.msg  Trafficlight.msg  VehicleGear.msg  VehicleLight.msg  VehicleSCC.msg  VehicleStatus.msg  VehicleSteering.msg  VehicleWheelSpeed.msg  Waypoint.msg  Waypoints.msg  vehicleCmd.msg
tools/message_logger/: package.xml
tools/rviz_configs/: mpc_rviz.rviz
