<?xml version="1.0"?>
<!--
  Copyright (c) 2022 Ulsan National Institute of Science and Technology (UNIST)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<package>
  <name>lowlevel_ctrl</name>
  <version>0.1.0</version>
  <description>lowlevel controller to map throttle to accelx</description>

  <maintainer email="hojinlee@unist.ac.kr">Hojin Lee</maintainer>

  <author email="hojinlee@unist.ac.kr">Hojin Lee</author>

  <license>BSD</license>

  <author>Hojin Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cmake_modules</build_depend> 
  <build_depend>tf</build_depend> 
  <build_depend>autorally_msgs</build_depend> 
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>hmcl_msgs</build_depend>
  
  
  <run_depend>hmcl_msgs</run_depend>  
  <run_depend>autorally_msgs</run_depend>  
  <run_depend>visualization_msgs</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rospy</run_depend>

</package>
