<?xml version="1.0"?>
<package format="2">
  <name>gplogger</name>
  <version>0.0.0</version>
  <description>The gplogger package</description>

  <maintainer email="hojinlee@unist.ac.kr">hjpc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hmcl_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>autorally_msgs</build_depend>
  <build_depend>grid_map_msgs</build_depend>  
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>hmcl_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>autorally_msgs</build_export_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>hmcl_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>autorally_msgs</exec_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
